--- a/FaceAnalysis/MainPage.xaml
+++ b/FaceAnalysis/MainPage.xaml
@@ -21,6 +21,9 @@
                     Identifies human faces within an image file and visualizes the results by drawing a box around each detected face. Click the button to select an image file to open (.jpg, .bmp, .png).
                     The image along with any detected faces will be displayed.
                 </TextBlock>
+                <Button Name="AddFilter"  Content="AddFilter" Click="AddFilter_Click"/>
+                <Button Name="GuessAge" Content="GuessAge" Click="GuessAge_Click"/>
+                <Button Name="Clear" Content="Clear" Click="Clear_Click"/>
             </StackPanel>
 
             <Grid HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Grid.Row="1">
@@ -29,8 +32,8 @@
                     <RowDefinition Height="*"/>
                 </Grid.RowDefinitions>
 
-                <Button Name="OpenFile" Grid.Row="0" Content="Open image file" Click="OpenFile_Click"/>
-                <Canvas Name="PhotoCanvas" Grid.Row="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="0,10,0,0" SizeChanged="PhotoCanvas_SizeChanged"/>
+                <Button Name="OpenFile" Grid.Row="0" Grid.Column="0" Content="Open image file" Click="OpenFile_Click"/>
+                <Canvas Name="PhotoCanvas" Grid.Row="3" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="0,10,0,0" SizeChanged="PhotoCanvas_SizeChanged"/>
             </Grid>
 
             <!-- Status Block for providing messages to the user.  Use the
