--- a/FaceAnalysis/MainPage.xaml
+++ b/FaceAnalysis/MainPage.xaml
@@ -26,26 +26,48 @@
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
 
-        
-        <TextBlock Text="Description:" Grid.Row="0" Grid.Column="4"/>
-            <TextBlock TextWrapping="Wrap" Grid.Row="1" Grid.RowSpan="2" Grid.Column="4">
-            Identifies human faces within an image file and visualizes the results by drawing a box around each detected face. Click the button to select an image file to open (.jpg, .bmp, .png).
-            The image along with any detected faces will be displayed.
-        </TextBlock>
-        <Button Name="AddFilter"  Content="Add filter" Click="AddFilter_Click" Grid.Row="3" Grid.Column="4" HorizontalAlignment="Center" />
-        <Button Name="GuessAge" Content="Guess age" Click="GuessAge_Click" Grid.Row="4" Grid.Column="4" HorizontalAlignment="Center"/>
-        <Button Name="Clear" Content="Clear filters" Click="Clear_Click" Grid.Row="5" Grid.Column="4" HorizontalAlignment="Center"/>
-            
-        <Button Name="OpenFile" Content="Open image file" HorizontalAlignment="Center" Click="OpenFile_Click" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="4"/>
+            <Button
+            Name="OpenFile" 
+            Content="Open image file" 
+            VerticalAlignment="Stretch" 
+            HorizontalAlignment="Stretch" 
+            Click="OpenFile_Click" 
+            Background="DeepSkyBlue" 
+            Grid.Row="0" 
+            Grid.Column="0" Grid.ColumnSpan="4" >
+            </Button>
+
+            <Image Name="BlankSpaceImage"
+               Source="assets/blankspace.png"
+               Grid.Row="1"
+               Grid.RowSpan="5"
+               Grid.Column="0"
+               Grid.ColumnSpan="4"/>
+
             <Canvas Name="PhotoCanvas" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="0,10,0,0" SizeChanged="PhotoCanvas_SizeChanged" Grid.Row="1" Grid.RowSpan="5" Grid.Column="0" Grid.ColumnSpan="4">
-                
+
             </Canvas>
-                
-        
-        <!-- Status Block for providing messages to the user.  Use the
+
+            <!--<TextBlock Text="Description:" Grid.Row="0" Grid.Column="4"/>
+        <TextBlock TextWrapping="Wrap" Grid.Row="1" Grid.RowSpan="2" Grid.Column="4">
+        Identifies human faces within an image file and visualizes the results by drawing a box around each detected face. Click the button to select an image file to open (.jpg, .bmp, .png).
+        The image along with any detected faces will be displayed.
+        </TextBlock>-->
+
+            <Border Grid.Row="1" Grid.Column="4" BorderBrush="DeepSkyBlue" BorderThickness="4" Margin="5" >
+                    <Button Name="AddFilter"  Content="Add filter" Click="AddFilter_Click" HorizontalAlignment="Center" Background="DeepSkyBlue" Width="230" Height="90" IsEnabled="False"/>
+                </Border>
+                <Border Grid.Row="3" Grid.Column="4" BorderBrush="DeepSkyBlue" BorderThickness="4" Margin="5" >
+                    <Button Name="GuessAge" Content="Guess age" Click="GuessAge_Click" Grid.Row="4" Grid.Column="4" HorizontalAlignment="Center" Background="DeepSkyBlue" Width="230" Height="90" IsEnabled="False"/>
+                </Border>
+                <Border Grid.Row="5" Grid.Column="4" BorderBrush="DeepSkyBlue" BorderThickness="4" Margin="5" Padding="5" >
+                    <Button Name="Clear" Content="Clear filters" Click="Clear_Click" Grid.Row="5" Grid.Column="4" HorizontalAlignment="Center" Background="DeepSkyBlue" Width="230" Height="90" IsEnabled="False"/>
+                </Border>
+
+                <!-- Status Block for providing messages to the user.  Use the
             NotifyUser() method to populate the message -->
-        <Border x:Name="ErrorBorder" Background="Red" Grid.Row="6"/>
-        <TextBlock x:Name="StatusBlock" Grid.Row="2" Margin="12, 10, 12, 10" Visibility="Collapsed"/>
+                <Border x:Name="ErrorBorder" Background="Red" Grid.Row="6"/>
+                <TextBlock x:Name="StatusBlock" Grid.Row="2" Margin="12, 10, 12, 10" Visibility="Collapsed"/>
         </Grid>
     </Grid>
 </Page>
