--- a/FaceAnalysis/MainPage.xaml
+++ b/FaceAnalysis/MainPage.xaml
@@ -5,7 +5,13 @@
     xmlns:local="using:PhotoEditor"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d">
+    mc:Ignorable="d"
+    Width="1400"
+    Height="850"
+    MaxHeight="850"
+    MaxWidth="1400"
+    MinHeight="850"
+    MinWidth="1400">
 
     <Grid>
         <Grid.Background>
@@ -37,7 +43,7 @@
                 </Button>
             </StackPanel>
 
-            <StackPanel x:Name="UtilityStackPanel" Margin="0,330,0,0" HorizontalAlignment="Center" Grid.Column="1" Grid.Row="1" >
+            <StackPanel x:Name="UtilityStackPanel" Margin="0,330,0,0" HorizontalAlignment="Center" Grid.Column="1" Grid.Row="1" Visibility="Collapsed">
                 <TextBlock Text="Utilities" Foreground="White" FontSize="26" HorizontalAlignment="Center"/>
                 <Button Name="GuessAge" Content="Guess age from photo" Click="GuessAge_Click" FontSize="16" Foreground="White"/>
             </StackPanel>
